# node_based_image_processor

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  node_framework.cpp  node_framework.h
